fixed sortieren nach getting out of container on sort section

--- a/src/components/PropertySorting/property-sorting.module.scss
+++ b/src/components/PropertySorting/property-sorting.module.scss
@@ -27,6 +27,9 @@
   .sorting-description{
     min-width: max-content;
     max-width: max-content;
+    @include breakpoint(lg){
+      min-width: 128px;
+    }
   }
   
   .select-container{
